# Wildforge

./: .gitignore  Cargo.toml  README.md  build.rs
.claude/: settings.local.json.tmp.208599.baf2d0d24236
base/: aliases.toml  animals.toml  blocks.toml  features.toml  items.toml  recipes.toml  structures.toml  tags.toml
docs/: animals-plan.md  atproto-oauth-client-metadata.json  bows-armor-plan.md  bronze-age-plan.md  browser-creative-plan.md  economy-plan.md  food-plan.md  game-feel-plan.md  glassworks-plan.md  hdr-bloom-plan.md  hostiles-plan.md  light-chests-plan.md  mechanization-plan.md  minerals-geology-plan.md  modding-plan.md  modularization-plan.md  multiplayer-identity-operations.md  multiplayer-identity-plan.md  multiplayer-plan.md  normal-atlas-plan.md  parallax-plan.md  player-model-plan.md  point-lights-integration-plan.md  point-shadows-plan.md  relief-multilayer-plan.md  roadmap-plan.md  steelworks-plan.md  stewardship-plan.md  terrain-v2-plan.md  texture-packs-plan.md  trade-travel-plan.md  water-and-ticks-plan.md  weather-seasons-plan.md  wild-arc-plan.md
lexicons/: gay.dollspace.wildforge.device.json
mods/: README.md
mods/copper/: blocks.toml  features.toml  items.toml  main.rhai  mod.toml  recipes.toml
mods/gems/: blocks.toml  features.toml  items.toml  main.rhai  mod.toml  recipes.toml
packs/dusk/: pack.toml
packs/gemini/: pack.toml
packs/hewn/: pack.toml
src/: atlas.rs  audio.rs  camera.rs  chunk.rs  config.rs  crafting.rs  dedicated.rs  entity.rs  identity.rs  inventory.rs  lib.rs  lights.rs  main.rs  mesher.rs  mobs.rs  mp.rs  net.rs  particles.rs  physics.rs  post.wgsl  raycast.rs  registry.rs  renderer.rs  script.rs  server.rs  shader.wgsl  sky.rs  style.rs  tests.rs  ui.rs  world.rs  worldgen.rs
src/atlas/: mod.rs  packs.rs  procedural.rs  season.rs
src/game/: actions.rs  app.rs  browser.rs  containers.rs  content.rs  frame.rs  input.rs  interaction.rs  inventory_ui.rs  keymap.rs  menus.rs  mod.rs  remote.rs  roster_ui.rs  session.rs  status.rs  streaming.rs  survival.rs  ui.rs
src/identity/: atproto.rs  local.rs  oauth_conformance.rs
src/multiplayer/: host.rs  moderation.rs  profiles.rs  roster.rs  settings.rs
src/net/: handshake.rs  protocol.rs  transport.rs
src/renderer/: frame.rs  mod.rs  post.rs  resources.rs  setup.rs
src/tests/: identity.rs  machines.rs  mobs.rs  mod.rs  multiplayer.rs  player.rs  (+4 more)
tools/: gen_base_tiles.py  gen_texture_pack.py  split_material_sheet.py
(+13 files in other folders)
