[package]
name = "wildforge"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.1", features = ["derive"] }
glam = { version = "0.33.2", features = ["serde"] }
noise = "0.9.0"
png = "0.18.1"
pollster = "1.0.1"
postcard = { version = "1", features = ["alloc"] }
quinn = "0.11"
rcgen = "0.13"
rhai = "1.25.1"
rodio = "0.19"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
toml = "1.1.3"
wgpu = "26"
winit = "0.30.13"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
